--- a/main.tex
+++ b/main.tex
@@ -14,27 +14,27 @@
 \input{cover}
 
 \chapter{Acknowledgments}
-\input{acknowledgments}
+% \input{acknowledgments}
 \clearpage
 
 \chapter{Abstract}
-\input{abstract}
+% \input{abstract}
 \clearpage
 
 \chapter{Table of Contents}
 \tableofcontents % Generates table of contents from sections and subsections
 \clearpage
 
-\chapter{List of Figures}
-\listoffigures
-\clearpage
+% \chapter{List of Figures}
+% \listoffigures
+% \clearpage
 
-\chapter{List of Tables}
-\listoftables
-\clearpage
+% \chapter{List of Tables}
+% \listoftables
+% \clearpage
 
 \chapter{List of Abbreviations}
-\input{abbreviations}
+% \input{abbreviations}
 \clearpage
 
 \mainmatter
@@ -48,33 +48,34 @@
 \chapter{Objectives}
 \clearpage
 
-\input{objectives}
+% \input{objectives}
 \clearpage
 
-\chapter{Materials and Methods}
+\chapter{Construction materials}
 \clearpage
 
-\input{methods}
+% \input{results_1}
 \clearpage
 
-\chapter{Results and Discussion}
+\chapter{Construction sector's decarbonization}
 \clearpage
-\input{results}
+
+% \input{results_2}
+\clearpage
+
+\chapter{Discussion}
+\clearpage
+% \input{results}
 \clearpage
 
 \chapter{Conclusions}
 \clearpage
-\input{conclusions}
+% \input{conclusions}
 
 \chapter{Bibliography}
 \clearpage
 \begin{multicols}{2}
 \printbibliography[heading=none]
 \end{multicols}
-
-\chapter{Appendix}
-\clearpage
-\input{appendix}
-\clearpage
 
 \end{document}
