--- a/main.tex
+++ b/main.tex
@@ -54,13 +54,13 @@
 \chapter{Construction materials}
 \clearpage
 
-% \input{results_1}
+\input{results_1}
 \clearpage
 
 \chapter{Construction sector's decarbonization}
 \clearpage
 
-% \input{results_2}
+\input{results_2}
 \clearpage
 
 \chapter{Discussion}
