--- a/cover.tex
+++ b/cover.tex
@@ -28,9 +28,9 @@ Treball realitzat al Departament de Genètica, Microbiologia i Estadística de l
 
 \vfill
 \begin{minipage}[b]{1\linewidth}\centering
-Doctorand
+Student
   
-\textbf{Raziel Amador Rios}
+\textbf{Elda Vanessa Vega Mendez}
 \end{minipage}
 \end{center}
 
@@ -54,7 +54,7 @@ Centre de Regulació Genòmica
 \vspace*{2ex}
 
 \begin{center}
-\textbf{Barcelona, Novembre de 2021}
+\textbf{Barcelona, September 2022}
 \end{center}
 
 \end{titlepage}
