--- a/cover.tex
+++ b/cover.tex
@@ -1,7 +1,7 @@
 \begin{titlepage}
 
 \begin{center}
-\includegraphics[height=0.07\textheight]{img/cover/ub.png}
+\includegraphics[height=0.07\textheight]{img/cover/upc_cover.png.png}
   
 \vspace*{1ex}
 FACULTAT DE BIOLOGIA
