--- a/results_2.tex
+++ b/results_2.tex
@@ -1,20 +1,22 @@
-\section[Challenges towards the construction sector's decarbonization]{Challenges towards the construction sector's decarbonization}
+\section[Decarbonization]{Decarbonization}
 \label{sec:challenges_towards_the_construction_sector_decarbonization}
 
-\subsection{Circularity}
+\subsection{Challenges towards the construction sector's decarbonization}
+\label{sec:Challenges_towards_the_construction_sector_decarbonization}
+
+\subsubsection{Circularity}
 \label{sec:circularity}
 
-
-\subsection{Dematerialization}
+\subsubsection{Dematerialization}
 \label{sec:dematerialization}
 
-\subsection{Building mining: Buildings as Material Banks}
+\subsubsection{Building mining: Buildings as Material Banks}
 \label{sec:building_mining_buildings_material_banks}
 
-\subsubsection{Building material passport}
+\subsubsubsection{Building material passport}
 \label{sec:building_material_passport}
 
-\subsection{Usage of local raw materials}
+\subsubsection{Usage of local raw materials}
 \label{sec:usage_local_raw_materials}
 
 
