--- a/cover.tex
+++ b/cover.tex
@@ -4,58 +4,49 @@
 \includegraphics[height=0.07\textheight]{img/cover/upc_cover.png.png}
   
 \vspace*{1ex}
-FACULTAT DE BIOLOGIA
+UPC VALLÈS
 
-DEPARTAMENT DE GENÈTICA
+ETSAV - Vallès School of Architecture
 
-Programa de Doctorat en Genètica
+Master's degree in \textbf{Sustainable Intervention in the Built Environment} (MISMeC)
 
 \vspace*{2ex}
 
-{\huge\mdseries Unravelling the Role of Long Noncoding RNAs in the Context of Cell-growth and Regeneration\par}
+{\huge\mdseries Title\par}
 \vspace*{2ex}
 
-Memòria presentada per    
+Manuscript presented by
 
-\textbf{Raziel Amador Rios}
+\textbf{Elda Vanessa Vega Méndez}
 
-per a optar al grau de Doctor per la
+to obtain the Master’s degree by the 
 
-Universitat de Barcelona
+Universitat Politècnica de Cataluya (UPC)
 
 \vspace*{3ex}
-Treball realitzat al Departament de Genètica, Microbiologia i Estadística de la Facultat de Biologia de la Universitat de Barcelona i al Centre de Regulació Genòmica (CRG)
+This work was performed at the UPC Vallès department 
 
 \vfill
 \begin{minipage}[b]{1\linewidth}\centering
-Student
+Master Student
   
-\textbf{Elda Vanessa Vega Mendez}
+\textbf{Elda Vanessa Vega Méndez}
 \end{minipage}
 \end{center}
 
 \vspace*{5ex}
-\begin{minipage}[b]{0.45\linewidth}\centering
-Co-Director
+\begin{minipage}[b]{0.9\linewidth}\centering
+Director
   
-\textbf{Montserrat Corominas}
+\textbf{Mariana Palumbo Fernández}
 
-Universitat de Barcelona
+Universitat Politècnica de Cataluya
 \end{minipage}
-\hfill
-\begin{minipage}[b]{0.45\linewidth}\centering
 
-Co-Director
-
-\textbf{Roderic Guigó}
-
-Centre de Regulació Genòmica
-\end{minipage}
 \vspace*{2ex}
 
 \begin{center}
-\textbf{Barcelona, September 2022}
+\textbf{Barcelona, October 2022}
 \end{center}
 
 \end{titlepage}
-
