--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -31,6 +31,9 @@
   \item[] \textbf{PS} - Polystyrene
   \item[] \textbf{PUR} - Polyurethane
   \item[] \textbf{PVC} - Polyvinyl chloride
+  \item[] \textbf{UK} - United Kingdom
+  \item[] \textbf{US} - United States
+  \item[] \textbf{USSR} - Union of Soviet Socialist Republics
   \item[] \textbf{UM} - Urban mining
   \item[] \textbf{WEEE} - Waste from electrical and electronic equipment
   \item[] \textbf{WGBC} - World Green Building Council
