results 2 backbone updated

--- a/results_2.tex
+++ b/results_2.tex
@@ -1,22 +1,32 @@
-\section[Decarbonization]{Decarbonization}
-\label{sec:challenges_towards_the_construction_sector_decarbonization}
-
-\subsection{Challenges towards the construction sector's decarbonization}
+\section{Decarbonization roadmaps}
 \label{sec:Challenges_towards_the_construction_sector_decarbonization}
 
-\subsubsection{Circularity}
+\subsection{Materials used for structural purposes}
 \label{sec:circularity}
 
-\subsubsection{Dematerialization}
-\label{sec:dematerialization}
+\subsubsection{Steel and iron}
+\label{sec:circularity}
 
-\subsubsection{Building mining: Buildings as Material Banks}
-\label{sec:building_mining_buildings_material_banks}
+\subsubsection{Cement and concrete}
+\label{sec:circularity}
 
-\subsubsubsection{Building material passport}
-\label{sec:building_material_passport}
+\subsection{Materials used for services}
+\label{sec:circularity}
 
-\subsubsection{Usage of local raw materials}
-\label{sec:usage_local_raw_materials}
+\subsubsection{Plastics}
+\label{sec:circularity}
+
+
+%% \subsubsection{Dematerialization}
+%% \label{sec:dematerialization}
+
+%% \subsubsection{Building mining: Buildings as Material Banks}
+%% \label{sec:building_mining_buildings_material_banks}
+
+%% \subsubsubsection{Building material passport}
+%% \label{sec:building_material_passport}
+
+%% \subsubsection{Usage of local raw materials}
+%% \label{sec:usage_local_raw_materials}
 
 
