--- a/results_2.tex
+++ b/results_2.tex
@@ -1,32 +1,18 @@
 \section{Decarbonization roadmaps}
-\label{sec:Challenges_towards_the_construction_sector_decarbonization}
+\label{sec:decarbonization_roadmaps}
 
 \subsection{Materials used for structural purposes}
-\label{sec:circularity}
+\label{sec:materials_used_for_structural_purposes}
 
 \subsubsection{Steel and iron}
-\label{sec:circularity}
+\label{sec:steel_and_iron}
 
 \subsubsection{Cement and concrete}
-\label{sec:circularity}
+\label{sec:cement_and_concrete}
 
 \subsection{Materials used for services}
-\label{sec:circularity}
+\label{sec:materials_used_for_services}
 
 \subsubsection{Plastics}
-\label{sec:circularity}
-
-
-%% \subsubsection{Dematerialization}
-%% \label{sec:dematerialization}
-
-%% \subsubsection{Building mining: Buildings as Material Banks}
-%% \label{sec:building_mining_buildings_material_banks}
-
-%% \subsubsubsection{Building material passport}
-%% \label{sec:building_material_passport}
-
-%% \subsubsection{Usage of local raw materials}
-%% \label{sec:usage_local_raw_materials}
-
+\label{sec:plastics}
 
