--- a/results_1.tex
+++ b/results_1.tex
@@ -1,48 +1,15 @@
-\section[Construction materials growth and energy production from the 20th century to the beginnings of the 21st century]{Construction materials growth and energy production from the 20th century to the beginnings of the 21st century}
-\label{sec:construction_materials_growth_and_energy_production_in_the_20th_century}
+\section{Construction materials from the 20th century to the beginnings of the 21st century}
+\label{sec:construction_materials}
 
-\subsection{1900 - 1919}
-\label{sec:1900-1919}
+\subsection{WWI}
+\label{sec:wwi}
 
-\subsection{1920 - 1939}
-\label{sec:1900-1919}
+\subsection{WWII}
+\label{sec:wwii}
 
-Advanced steel, concrete, and glass products entered the market as these raw materials were exploited and world trade increased. In contrast to earlier times when only four or five different types of steel were produced,\autocite{jester2014twentieth} by the 1920s a wide variety of alloys were available, better and more affordably satisfying the need to build structural designs that challenged the building's shape and height. Although the nature of the materials was continually evolving, more scientific considerations such as thermal insulation, acoustical control, and lighting were taken into consideration.
+\subsection{Yom Kippur war}
+\label{sec:yom_kippur_war}
 
-The use of the steel frame significantly increased the demand for exterior cladding that would be both firmly fixed and effectively insulating. The increasing use of thermal insulation during the 1920s, even in home construction, represented a new concern for environmental control. When it came to the management and control of steam, heating engineers promoted asbestos as the best solution, and cork was chosen when refrigeration was required. Acoustical experts came up with the idea of perforated tiles as a result of growing urban noise abatement concerns. The improvements in lighting were more pronounced. In 1930, seven out of ten homes had electricity, compared to only one out of every seven in 1910. 
-Electricity's widespread use affected how materials and buildings were assembled and installed. The development of portable electric power tools sped up construction.
-
-The third of the 20th century's five major global revolutionary waves occurred between 1930 and 1938. New housing was promoted during this time as a way to stimulate the economy, but because people were moving away from large, costly homes and toward smaller, simpler homes with fewer rooms for ever-smaller families, the impact of any new housing would be relatively low. The number of manufacturers of building products and suppliers of raw materials declined throughout the 1930s due to the lack of construction activity.
-
-New materials were introduced by the 1930s' end as a component of the aspirations of the typical homeowner for a promising future. Progressive thinkers in the building sector believed that mass-production methods and scientific research could provide housing for all populations. This notion was prevalent up to the 1960s.
-
-While urban planning emerged as a discipline, between research and action, and the profession of urban planner began to take shape, the reflection on the ordering of urban space under the imperatives of hygiene and "comfort" (functionality), with the provision of healthy, family, and affordable housing as the main urgency, nurtured a new thought about the city that was sponsored mainly by the progressive fractions—even “socialist”—of the bourgeoisie and that developed at the same time that, in the most industrial cities of Europe, like Paris and Barcelona, the popular classes were unionized and an opposition labor movement grew.
-
-\subsection{1940 - 1959}
-\label{sec:1900-1919}
-
-The transition to a wartime economy was apparent in the building sector by the beginning of 1940. The government was investing in any company producing strategic materials. The most prominent example of a material that was employed to its fullest extent during World War II is perhaps aluminum. Through the 1920s and 1930s, aluminum remained generally more expensive than steel. As a result, only trim or alloys were used in buildings. A postwar surplus arose due to increased manufacturing and the development of sandwiched panels in response to the necessity for airplanes during World War II. Aluminum manufacturers sought out new markets while praising how easily the metal could be produced, lowering its cost by using the electrolytic method. They introduced extruded pieces for door and window frames and aluminum siding as a replacement for asphalt and asbestos veneers.
-
-Due to the high demand for steel and copper in defense manufacturing, their usage in housing construction had to cease, so contractors made changes. Without much reinforcement, concrete was poured; reflective insulating foil was restricted; and fiberglass took the place of the more costly asbestos. The use of glued laminated timber was frequently used to solve the issue of bridging large distances. Plywood would be used in places where wood paneling could be preferable.
-
-An unheard-of demand for new structures resulted from the production of ships, aircraft, tanks, guns, explosives, and other military and supply items. During World War II, the United States added 1,284 airports to the approximately 30 that had been built before 1940. For instance, fifty camps and cantonments were built at the start of the war, each with miles of roadways surrounded by barracks, mess halls, hospitals, stores, chapels, and theaters, all supported by independent systems to provide electricity, heat, water, and sewage.
-
-As the world started to think about peace, traditional building materials like bricks and stone were in scarce supply, while more modern resources were in great supply. The period after WWII was known as the “Great Acceleration," characterized by enhanced consumption and urban development.1 The building products business started to grow along with the economy during the 1950s and 1960s. Savings amassed during the war were utilized to finance veterans' financial benefits.3 The purchase of new household goods led to a rise in suburbanization and one of its most successful eras for the construction industry. It was widely believed that the government needed to actively engage in economic matters and support research and development, frequently in collaboration with universities, to produce improvement initiatives like public housing, urban development, and transportation. The belief held that mass production would satisfy practically all needs. 
-
-Research and development into building materials increased, notably in applications involving prestressed concrete, after a greater understanding of the matrix's makeup and the conditions that led to curing. Precast concrete panels were first used in the war-torn inner cities of Europe. Additionally, carpenters discovered for the first time that they could frequently earn more money by forgoing their regular trade to create the formwork for pouring walls and decks.
-
-In the cold war, the two powers, the United States and the USSR, entered into a frantic arms race. Large budgets were invested in achieving technological dominance in order to dissuade the adversary from attacking. In the 1950s, the first civil nuclear power plants appeared.
-
-\subsection{1960 - 1979}
-\label{sec:1900-1919}
-
-\subsection{1980 - 1999}
-\label{sec:1900-1919}
-
-\subsection{2000 - 2019}
-\label{sec:1900-1919}
-
-
-
-
+\subsection{Paris agreement}
+\label{sec:paris_agreement}
 
