update references 80, remove acknowledgments, put co2 format

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -6,7 +6,7 @@
   \item[] \textbf{CCU} - Carbon capture and utilization
   \item[] \textbf{CE} - Circular economy
   \item[] \textbf{CIS} - Commonwealth of Independent States
-  \item[] \textbf{CO2} - Carbon dioxide
+  \item[] \textbf{CO$_2$} - Carbon dioxide
   \item[] \textbf{DRI} - Direct reduced iron
   \item[] \textbf{EAF} - Electric arc furnace
   \item[] \textbf{EMF} - Ellen McArthur Foundation
