--- a/library.bib
+++ b/library.bib
@@ -168,3 +168,353 @@
   year={2015},
   publisher={Autrement}
 }
+@article{ritchie2018urbanization,
+  title={Urbanization},
+  author={Ritchie, Hannah and Roser, Max},
+  journal={Our world in data},
+  year={2018}
+}
+@article{owidenergy,
+    author = {Hannah Ritchie and Max Roser and Pablo Rosado},
+    title = {Energy},
+    journal = {Our World in Data},
+    year = {2020},
+    note = {https://ourworldindata.org/energy}
+}
+@article{rockstrom2017roadmap,
+  title={A roadmap for rapid decarbonization},
+  author={Rockstr{\"o}m, Johan and Gaffney, Owen and Rogelj, Joeri and Meinshausen, Malte and Nakicenovic, Nebojsa and Schellnhuber, Hans Joachim},
+  journal={Science},
+  volume={355},
+  number={6331},
+  pages={1269--1271},
+  year={2017},
+  publisher={American Association for the Advancement of Science}
+}
+@techreport{hertwich2019carbon,
+  title={The carbon footprint of material production rises to 23\% of global greenhouse gas emissions},
+  author={Hertwich, Edgar and others},
+  year={2019},
+  institution={Center for Open Science}
+}
+@article{environment2018eco,
+  title={Eco-efficient cements: Potential economically viable solutions for a low-CO2 cement-based materials industry},
+  author={Environment, UN and Scrivener, Karen L and John, Vanderley M and Gartner, Ellis M},
+  journal={Cement and Concrete Research},
+  volume={114},
+  pages={2--26},
+  year={2018},
+  publisher={Elsevier}
+}
+@article{ekins2020circular,
+  title={The circular economy: what, why, how and where},
+  author={Ekins, Paul and Domenech Aparisi, T and Drummond, Paul and Bleischwitz, Raimund and Hughes, Nick and Lotti, Lorenzo},
+  year={2020},
+  publisher={The OECD Centre for Entrepreneurship}
+}
+@article{benachio2020circular,
+  title={Circular economy in the construction industry: A systematic literature review},
+  author={Benachio, Gabriel Luiz Fritz and Freitas, Maria do Carmo Duarte and Tavares, Sergio Fernando},
+  journal={Journal of Cleaner Production},
+  volume={260},
+  pages={121046},
+  year={2020},
+  publisher={Elsevier}
+}
+@article{agrawal2019om,
+  title={OM Forum—New opportunities for operations management research in sustainability},
+  author={Agrawal, Vishal V and Atasu, Atalay and Van Wassenhove, Luk N},
+  journal={Manufacturing \& Service Operations Management},
+  volume={21},
+  number={1},
+  pages={1--12},
+  year={2019},
+  publisher={INFORMS}
+}
+@article{rissman2020technologies,
+  title={Technologies and policies to decarbonize global industry: Review and assessment of mitigation drivers through 2070},
+  author={Rissman, Jeffrey and Bataille, Chris and Masanet, Eric and Aden, Nate and Morrow III, William R and Zhou, Nan and Elliott, Neal and Dell, Rebecca and Heeren, Niko and Huckestein, Brigitta and others},
+  journal={Applied Energy},
+  volume={266},
+  pages={114848},
+  year={2020},
+  publisher={Elsevier}
+}
+@article{norouzi2021circular,
+  title={Circular economy in the building and construction sector: A scientific evolution analysis},
+  author={Norouzi, Masoud and Ch{\`a}fer, Marta and Cabeza, Luisa F and Jim{\'e}nez, Laureano and Boer, Dieter},
+  journal={Journal of Building Engineering},
+  volume={44},
+  pages={102704},
+  year={2021},
+  publisher={Elsevier}
+}
+@book{dalio2021principles,
+  title={Principles for Dealing with the Changing World Order: Why Nations Succeed Or Fail},
+  author={Dalio, Ray},
+  year={2021},
+  publisher={Simon and Schuster}
+}
+@article{celadyn2021investigation,
+  title={An investigation of the potential of dematerialization to reduce the life cycle embodied energy of buildings},
+  author={Celadyn, Waclaw},
+  journal={Archives of Civil Engineering},
+  volume={67},
+  number={4},
+  year={2021},
+  publisher={Polska Akademia Nauk}
+}
+@article{van2004dematerialization,
+  title={Dematerialization: not just a matter of weight},
+  author={Van der Voet, Ester and van Oers, Lauran and Nikolic, Igor},
+  journal={Journal of industrial ecology},
+  volume={8},
+  number={4},
+  pages={121--137},
+  year={2004},
+  publisher={Wiley Online Library}
+}
+@article{swikatek2013dematerialization,
+  title={Dematerialization in architecture as an imperative of sustainable building},
+  author={{\'S}wi{\k{a}}tek, Leszek},
+  journal={Sustainable Building and Refurbishment for Next Generations},
+  volume={6},
+  year={2013}
+}
+@book{weizsacker1998factor,
+  title={Factor four: doubling wealth-halving resource use: the new report to the Club of Rome},
+  author={Weizs{\"a}cker, Ernst Ulrich and Lovins, Amory B and Lovins, L Hunter and others},
+  year={1998},
+  publisher={Earthscan}
+}
+@article{arora2020buildings,
+  title={Buildings and the circular economy: Estimating urban mining, recovery and reuse potential of building components},
+  author={Arora, Mohit and Raspall, Felix and Cheah, Lynette and Silva, Arlindo},
+  journal={Resources, Conservation and Recycling},
+  volume={154},
+  pages={104581},
+  year={2020},
+  publisher={Elsevier}
+}
+@article{koutamanis2018urban,
+  title={Urban mining and buildings: A review of possibilities and limitations},
+  author={Koutamanis, Alexander and van Reijn, Boukje and van Bueren, Ellen},
+  journal={Resources, Conservation and Recycling},
+  volume={138},
+  pages={32--39},
+  year={2018},
+  publisher={Elsevier}
+}
+@article{honic2021material,
+  title={Material Passports for the end-of-life stage of buildings: Challenges and potentials},
+  author={Honic, Meliha and Kovacic, Iva and Aschenbrenner, Philipp and Ragossnig, Arne},
+  journal={Journal of Cleaner Production},
+  volume={319},
+  pages={128702},
+  year={2021},
+  publisher={Elsevier}
+}
+@article{hertwich2019material,
+  title={Material efficiency strategies to reducing greenhouse gas emissions associated with buildings, vehicles, and electronics—a review},
+  author={Hertwich, Edgar G and Ali, Saleem and Ciacci, Luca and Fishman, Tomer and Heeren, Niko and Masanet, Eric and Asghari, Farnaz Nojavan and Olivetti, Elsa and Pauliuk, Stefan and Tu, Qingshi and others},
+  journal={Environmental Research Letters},
+  volume={14},
+  number={4},
+  pages={043004},
+  year={2019},
+  publisher={IOP Publishing}
+}
+@article{sibileau2021deep,
+  title={Deep Renovation: Shifting from exception to standard practice in EU Policy},
+  author={Sibileau, Helene and others},
+  journal={Buildings Performance Institute Europe (BPIE,$\}$ November},
+  year={2021}
+}
+@misc{pickard2020phasing,
+  title={Phasing out plastics},
+  author={Pickard, Sam and Sharp, Samuel},
+  year={2020},
+  publisher={Climate Works Foundation and 11th Hour Project. ODI, London}
+}
+@article{lozano2018comparative,
+  title={Comparative study on the environmental impact of traditional clay bricks mixed with organic waste using life cycle analysis},
+  author={Lozano-Miralles, Jos{\'e} Adolfo and Hermoso-Orz{\'a}ez, Manuel Jes{\'u}s and Mart{\'\i}nez-Garc{\'\i}a, Carmen and Rojas-Sola, Jos{\'e} Ignacio},
+  journal={Sustainability},
+  volume={10},
+  number={8},
+  pages={2917},
+  year={2018},
+  publisher={MDPI}
+}
+@article{morel2001building,
+  title={Building houses with local materials: means to drastically reduce the environmental impact of construction},
+  author={Morel, Jean-Claude and Mesbah, Ali and Oggero, M and Walker, Peter},
+  journal={Building and Environment},
+  volume={36},
+  number={10},
+  pages={1119--1126},
+  year={2001},
+  publisher={Elsevier}
+}
+@techreport{hertwich2019carbon,
+  title={The carbon footprint of material production rises to 23\% of global greenhouse gas emissions},
+  author={Hertwich, Edgar and others},
+  year={2019},
+  institution={Center for Open Science}
+}
+@article{geyer2017production,
+  title={Production, use, and fate of all plastics ever made},
+  author={Geyer, Roland and Jambeck, Jenna R and Law, Kara Lavender},
+  journal={Science advances},
+  volume={3},
+  number={7},
+  pages={e1700782},
+  year={2017},
+  publisher={American Association for the Advancement of Science}
+}
+@article{clapp2010low,
+  title={Low-emission development strategies (LEDS): Technical, institutional and policy lessons},
+  author={Clapp, Christa and Briner, Gregory and Karousakis, Katia},
+  year={2010},
+  publisher={OECD}
+}
+@article{fan2021low,
+  title={Low-carbon production of iron and steel: Technology options, economic assessment, and policy},
+  author={Fan, Zhiyuan and Friedmann, S Julio},
+  journal={Joule},
+  volume={5},
+  number={4},
+  pages={829--862},
+  year={2021},
+  publisher={Elsevier}
+}
+@misc{hoffmann2021decarbonization,
+  title={Decarbonization challenge for steel. McKinsey \& Company},
+  author={Hoffmann, C and Van Hoey, M and Zeumer, B},
+  year={2021}
+}
+@article{summit2019report,
+  title={Report of the Secretary-General on the 2019 Climate Action Summit and the way forward in 2020},
+  author={Summit, Climate Action},
+  journal={United Nations: New York, NY, USA},
+  year={2019}
+}
+@article{zhang2018comprehensive,
+  title={Comprehensive assessment of energy conservation and CO2 emissions mitigation in China’s iron and steel industry based on dynamic material flows},
+  author={Zhang, Qi and Xu, Jin and Wang, Yujie and Hasanbeigi, Ali and Zhang, Wei and Lu, Hongyou and Arens, Marlene},
+  journal={Applied Energy},
+  volume={209},
+  pages={251--265},
+  year={2018},
+  publisher={Elsevier}
+}
+@article{worldsteel2022world,
+  title={World Steel in Figures 2022, Worldsteel Association},
+  author={Worldsteel Association and others},
+  journal={http://www.worldsteel.org},
+  year={2022}
+}
+@misc{global2021institute,
+  title={Institute. Global Status of CCS 2020, November Report},
+  author={Global, CCS},
+  year={2021},
+  publisher={Global Carbon Capture and Storage Institute: Melbourne, VIC, Australia}
+}
+@article{henderson2020blue,
+  title={Blue hydrogen as an enabler of green hydrogen: the case of Germany},
+  author={Henderson, J},
+  journal={Oxford Institute for Energy Studies},
+  pages={17--19},
+  year={2020}
+}
+@article{langholtz20162016,
+  title={2016 Billion-ton report: Advancing domestic resources for a thriving bioeconomy, Volume 1: Economic availability of feedstock},
+  author={Langholtz, Matthew H and Stokes, Bryce J and Eaton, Laurence M},
+  journal={Oak Ridge National Laboratory, Oak Ridge, Tennessee, managed by UT-Battelle, LLC for the US Department of Energy},
+  volume={2016},
+  pages={1--411},
+  year={2016}
+}
+@article{karlsson2020roadmap,
+  title={Roadmap for decarbonization of the building and construction industry—A supply chain analysis including primary production of steel and cement},
+  author={Karlsson, Ida and Rootz{\'e}n, Johan and Toktarova, Alla and Odenberger, Mikael and Johnsson, Filip and G{\"o}ransson, Lisa},
+  journal={Energies},
+  volume={13},
+  number={16},
+  pages={4136},
+  year={2020},
+  publisher={MDPI}
+}
+@misc{world2019worldgbc,
+  title={WorldGBC Annual Report 2019},
+  author={World Green Building Council},
+  year={2019},
+  publisher={World Green Building Council London, UK}
+}
+@article{elkerbout2021impact,
+  title={IMPACT ASSESSMENT REPORT},
+  author={Elkerbout, Milan and Simonelli, Felice and Vu, Hien and Bryhn, Julie and Catuti, Mihnea and Del Giovane, Chiara and Muscio, Alessandro},
+  year={2021}
+}
+@article{lehne2018making,
+  title={Making concrete change: Innovation in low-carbon cement and concrete},
+  author={Lehne, Johanna and Preston, Felix},
+  year={2018},
+  publisher={Chatham House}
+}
+@article{cement2021concrete,
+  title={Concrete Future—The GCCA 2050 Cement and Concrete Industry Roadmap for Net Zero Concrete},
+  author={Cement, Global},
+  year={2021}
+}
+@inproceedings{lanko2017additive,
+  title={Additive technologies in construction of temporary housing for victims of natural disasters and other emergencies},
+  author={Lanko, Alexander},
+  booktitle={Energy Management of Municipal Transportation Facilities and Transport},
+  pages={1102--1108},
+  year={2017},
+  organization={Springer}
+}
+@article{iea2017energy,
+  title={Energy technology perspectives 2017},
+  author={IEA, IEA and others},
+  journal={Catalysing Energy Technology Transformations},
+  year={2017},
+  publisher={IEA—International Energy Agency Parise, France}
+}
+@article{imbabi2012trends,
+  title={Trends and developments in green cement and concrete technology},
+  author={Imbabi, Mohammed S and Carrigan, Collette and McKenna, Sean},
+  journal={International Journal of Sustainable Built Environment},
+  volume={1},
+  number={2},
+  pages={194--216},
+  year={2012},
+  publisher={Elsevier}
+}
+@article{cuchi2014building,
+  title={Building a common home. Building sector. A Global Vision report},
+  author={Cuch{\'\i}, A and Arcas-Abella, J and Casals-Tres, M and Fombella, G},
+  journal={WSB14 Barcelona},
+  year={2014}
+}
+@article{catalan2020autoria,
+  title={Autor{\'\i}a C{\'\i}clica Joaquim Arcas-Abella| Coordinador Mariona Alcaraz| Ana{\"\i}s Bas| Ander Bilbao},
+  author={Catalan, Paula and Cunill, Laia and Melo, Marta and GBCe, Autor{\'\i}a and Huerta, Dolores and Sauer, Bruno},
+  year={2020}
+}
+@article{smil2017bp,
+  title={BP Statistical Review of World Energy},
+  author={Smil, Vaclav},
+  journal={Energy Transitions: Global and National Perspectives},
+  pages={19},
+  year={2017}
+}
+@article{owidenergy,
+    author = {Hannah Ritchie and Max Roser and Pablo Rosado},
+    title = {Energy},
+    journal = {Our World in Data},
+    year = {2020},
+    note = {https://ourworldindata.org/energy}
+}
+
