--- a/main.tex
+++ b/main.tex
@@ -13,9 +13,9 @@
 
 \input{cover}
 
-\chapter{Acknowledgments}
-% \input{acknowledgments}
-\clearpage
+%% \chapter{Acknowledgments}
+%% % \input{acknowledgments}
+%% \clearpage
 
 \chapter{Abstract}
 % \input{abstract}
