add misc bibtex

--- a/library.bib
+++ b/library.bib
@@ -517,4 +517,82 @@
     year = {2020},
     note = {https://ourworldindata.org/energy}
 }
+@misc{campaya_2020,
+  title={CAMPANYA D’INSPECCIONS ALS EDIFICIS RESIDENCIALS DE L’ANTIC BARRI DEL SUD-OEST DEL BESÒS (EXTRACTE)},
+  author={Ajuntament de Barcelona},
+  year={2020}
+}
+@misc{worldometer_2020,
+  title={Current world population},
+  author={WorldOMeter},
+  year={2020},
+  howpublished="\url{https://www.worldometers.info/world-population/}",
+}
+@misc{ourworldindata_2020,
+  title={Do more people live in urban or rural areas?, 2000},
+  author={Our World in Data},
+  year={2018},
+  howpublished="\url{https://ourworldindata.org/grapher/urban-vs-rural-majority?time=2000}",
+}
+@book{claude2006faire,
+  title={Faire la ville. Les m{\'e}tiers de l'urbanisme au XXe si{\`e}cle},
+  author={Claude, Viviane},
+  year={2006},
+  publisher={Parenth{\`e}ses}
+}
+@misc{asbp_2020,
+  title={Plastics in Construction - Introductory Q&A Guide},
+  author={The Alliance for Sustainable Building Products},
+  year={2020},
+  howpublished="\url{https://asbp.org.uk/guide/plastics-intro-guide}",
+}
+@misc{marketinsider_2020,
+  title={uPVC doors \& windows market to exceed \$47 billion by 2024},
+  author={Markets Insider},
+  year={2017},
+  howpublished="\url{https://markets.businessinsider.com/news/stocks/upvc-doors-windows-
+market-to-exceed-47-billion-by-2024-1001959130}",
+}
+@misc{worldsteelassociation_2020,
+  title={Steel industry key facts},
+  author={World Steel Association},
+  year={2022},
+  howpublished="\url{https://worldsteel.org/about-steel/steel-industry-facts/}",
+}
+@misc{mckinsey_2020,
+  title={Net-zero steel in construction: The way forward},
+  author={McKinsey \& Company},
+  year={2022},
+  howpublished="\url{https://missionpossiblepartnership.org/wp-content/uploads/2022/04/net-zero-steel-in-construction-the-way-forward.pdf}",
+}
+@misc{iea_2020,
+  title={Global cement demand for building construction, 2000-2020, and in the Net Zero Scenario, 2025-2030},
+  author={IEA},
+  year={2022},
+  howpublished="\url{https://www.iea.org/data-and-statistics/charts/global-cement-demand-for-building-construction-2000-2020-and-in-the-net-zero-scenario-2025-2030}",
+}
+@misc{plasticseurpo_2021,
+  title={Plastics - the facts 2021},
+  author={Plastics Europe},
+  year={2021},
+  howpublished="\url{https://plasticseurope.org/wp-content/uploads/2021/12/Plastics-the-Facts-2021-web-final.pdf}",
+}
+@misc{aus_2022,
+  title={Material roadmaps (documento inédito)},
+  author={AUS del Colegio de Arquitectos de Catalunya},
+  year={2022},
+}
+@misc{kommerling_2022,
+  title={¿Cómo se fabrican las ventanas de PVC?},
+  author={Kommerling},
+  year={2022},
+  howpublished="\url{https://www.kommerling.es/carpinterias-pvc/como-fabrican-ventanas-pvc}",
+}
+@article{portner2022climate,
+  title={Climate change 2022: Impacts, adaptation and vulnerability},
+  author={P{\"o}rtner, Hans-Otto and Roberts, Debra C and Adams, H and Adler, C and Aldunce, P and Ali, E and Begum, R Ara and Betts, R and Kerr, R Bezner and Biesbroek, R and others},
+  journal={IPCC Sixth Assessment Report},
+  year={2022},
+  publisher={IPCC Geneva, The Netherlands}
+}
 
